[package]
name = "steg86"
description = "A tool for hiding messages in x86(_64) binaries"
license-file = "LICENSE"
version = "0.2.0"
authors = ["William Woodruff <william@yossarian.net>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/woodruffw/steg86"
repository = "https://github.com/woodruffw/steg86"
keywords = ["cli", "steganography", "steg", "x86"]
categories = ["command-line-utilities", "encoding"]

[package.metadata.release]
dev-version = false
publish = false # handled by GitHub Actions
push = true

[dependencies]
anyhow = "1.0"
bit-vec = "0.6.3"
clap = "3.1.2"
env_logger = "0.9"
goblin = "0.5"
iced-x86 = "1.16.0"
lazy_static = "1.4.0"
log = "0.4"
