[package]
name = "steg86"
description = "A tool for hiding messages in x86(_64) binaries"
license-file = "LICENSE"
version = "0.2.0"
authors = ["William Woodruff <william@yossarian.net>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/woodruffw/steg86"
repository = "https://github.com/woodruffw/steg86"
keywords = ["cli", "steganography", "steg", "x86"]
categories = ["command-line-utilities", "encoding"]

[package.metadata.release]
dev-version = false
publish = false # handled by GitHub Actions
push = true

[dependencies]
anyhow = "1.0"
bit-vec = "0.6"
clap = "4.3"
env_logger = "0.10"
goblin = "0.7"
iced-x86 = "1.20"
lazy_static = "1.4"
log = "0.4"
